--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Madhan S</h1>
     <div style="text-align:center;">
         <a href="Wordle/index.html" target="_blank" style="display:inline-block;background-color:#0077B5;color:white;padding:8px 16px;text-decoration:none;border-radius:4px;">Wordle</a>
-        <a href="TicTacToe/tictactoe.html"_blank" style="display:inline-block;background-color:black;color:white;padding:8px 16px;text-decoration:none;border-radius:4px;margin-left:10px;">TicTacToe</a>
-        <a href="Front-end-Project/photoAlbum/PhotoAlbum.html" style="display:inline-block;background-color:#D44638;color:white;padding:8px 16px;text-decoration:none;border-radius:4px;margin-left:10px;">Photo Album</a>
+        <a href="TicTacToe/tictactoe.html" target="_blank" style="display:inline-block;background-color:black;color:white;padding:8px 16px;text-decoration:none;border-radius:4px;margin-left:10px;">TicTacToe</a>
+        <a href="PhotoAlbum/PhotoAlbum.html" style="display:inline-block;background-color:#D44638;color:white;padding:8px 16px;text-decoration:none;border-radius:4px;margin-left:10px;">Photo Album</a>
     </div>
     <h6>madhankumar200205@gmail.com</h6>
     <h6>Hosur, Tamil Nadu</h6>
